# blog_ai_agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 512f6dbb53f5_article_모델에_tags_reference_count_.py  b0f36a26b832_article_pipelinerun_모델_확장.py  cf295f11de6e_초기_스키마.py
backend/app/: config.py  dependencies.py  exceptions.py  main.py
backend/app/api/: router.py
backend/app/api/middleware/: error_handler.py  rate_limiter.py  request_logger.py
backend/app/api/v1/: articles.py  calendar.py  formats.py  health.py  pipeline.py  settings.py  webhooks.py
backend/app/claude/: client.py  parser.py
backend/app/claude/prompts/: base.py  generator.py  image_generator.py  image_planner.py  oracle.py  outliner.py  researcher.py  router.py  validator.py
backend/app/db/: engine.py  session.py
backend/app/db/repositories/: article_repo.py  base.py  pipeline_repo.py  validation_repo.py
backend/app/formats/: __init__.py  registry.py  schema.py
backend/app/formats/definitions/: architecture.yaml  comparison.yaml  concept.yaml  review.yaml  trend.yaml  troubleshooting.yaml  tutorial.yaml
backend/app/images/: image_generator.py  mermaid_renderer.py  playwright_renderer.py
backend/app/models/: __init__.py  article.py  base.py  pipeline_run.py  validation.py
backend/app/pipeline/: base.py  orchestrator.py
backend/app/pipeline/gates/: gate_one.py  gate_two.py
backend/app/pipeline/stages/: s1_router.py  s2_researcher.py  s3_outliner.py  s4_generator.py  s5_validator.py  s6_publisher.py  section_writer.py
backend/app/pipeline/subagents/: base.py  librarian_blog_en.py  librarian_blog_kr.py  librarian_github.py  librarian_official.py
backend/app/publishers/: __init__.py  base.py  html_converter.py  tistory.py  wordpress.py
backend/app/schemas/: article.py  common.py  pipeline.py  publish.py
backend/app/services/: article_service.py  obsidian_service.py  pipeline_service.py  webhook_service.py
backend/app/utils/: file_manager.py  logger.py  markdown.py  slug.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_integration.py  test_db_repos.py  test_generator_progress_e2e.py  test_pipeline_service.py
backend/tests/unit/: test_article_service.py  test_articles_api.py  test_brand_persona.py  test_calendar_api.py  test_claude_client.py  test_claude_parser.py  test_file_manager.py  test_format_registry.py  test_formats_api.py  test_gate_one.py  test_gate_two.py  test_generator_stage.py  test_health.py  test_health_tistory.py  test_html_converter.py  test_image_generator.py  test_json_logger.py  test_librarian_subagents.py  test_logger.py  test_markdown_util.py  test_mermaid_renderer.py  test_obsidian_service.py  test_oracle_prompt.py  test_outliner_stage.py  test_pipeline_api.py  test_pipeline_orchestrator.py  test_playwright_renderer.py  test_publisher_registry.py  test_publisher_stage.py  test_rate_limiter.py  test_researcher_stage.py  test_router_stage.py  test_section_writer.py  test_settings_api.py  test_slug.py  test_tistory_publisher.py  test_validator_stage.py  test_webhook_service.py  test_webhooks_api.py
docs/: 00-elevator-pitch.md  01-problem-statement.md  02-benchmark.md  03-team-and-roles.md  04-requirements.md  06-ux-design.md  (+6 more)
(+139 files in other folders)
