[project]
name = "blog-ai-agent-backend"
version = "0.1.1"
description = "Blog AI Agent 백엔드 — FastAPI + Claude Code CLI subprocess"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jaylen H" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.18.4",
    "pyyaml>=6.0.3",
    "httpx>=0.28",
]


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008", "UP046"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
# uv는 dependency-groups의 dev를 기본 설치한다(`uv sync`/`uv run`).
# 개발 도구는 모두 여기 둬야 CI(`uv run pytest`)에서도 누락되지 않는다.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
